# Marcus

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
docs/: Cargo.toml  README.md
docs/src/: main.rs
src/: lib.rs  main.rs  regex.rs
src/core/: auto_link.rs  blockquotes.rs  code.rs  comments.rs  definition_list.rs  emoji.rs  emoji_list.rs  emojis.rs  emphasis.rs  escape.rs  headings.rs  highlight.rs  horizontal_rule.rs  inline_ignore.rs  links_images_footnotes.rs  lists_and_task_lists.rs  mod.rs  paragraphs.rs  re.rs  strikethrough.rs  subscript.rs  superscript.rs  table.rs
src/helpers/: escape.rs  fileio.rs  id.rs  mod.rs  re.rs
src/lib/: fileio.rs  id.rs  mod.rs
src/parser/: auto_link.rs  blockquotes.rs  cleanup.rs  code.rs  comments.rs  definition_list.rs  emojis.rs  emphasis.rs  escape.rs  headings.rs  highlight.rs  horizontal_rule.rs  inline_code.rs  inline_ignore.rs  links_images_footnotes.rs  lists_and_task_lists.rs  mod.rs  paragraphs.rs  strikethrough.rs  subscript.rs  superscript.rs  table.rs
test/: index.css  index.html  index.js
test/basic/: blockquote.html  blockquote.md  code.html  code.md  comments.html  comments.md  emphasis.html  emphasis.md  escape.html  escape.md  heading.html  horizontal-rule.html  horizontal-rule.md  image.html  image.md  link.html  link.md  list.html  paragraphs.html
test/custom/: auto-email.html  auto-email.md  auto-link.html  auto-link.md  inline-ignore.html
test/extended/: definition-list.html  definition-list.md  emoji.html  emoji.md  fenced-code-block.html  footnote.html  heading-id.md  (+10 more)
(+16 files in other folders)
