[package]
name = "marcus"
version = "0.1.0"
edition = "2021"
description = "An experimental Markdown parser written in Rust"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Malekaia/Marcus"
repository = "https://github.com/Malekaia/Marcus"
documentation = "https://github.com/Malekaia/Marcus"

[profile.dev]
opt-level = 1

[dependencies]
rand = "0.8.5"
regex = "1.6.0"
url = "2.3.1"
